--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "@types/node": "^18.7.18",
     "chai": "^4.3.6",
     "hardhat": "^2.11.2"
+  },
+  "dependencies": {
+    "@renft/sdk": "^5.0.4"
   }
 }
